# ml-digits-recognition

./: .gitignore  .readthedocs.yaml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  build_docs.sh  dev.requirements.txt  html_drawing_flask.py  mkdocs.yml  ml_digits_recognition_training.ipynb  passenger_wsgi.py  pyproject.toml  release.sh  requirements.txt  run.py  test_mypi.sh  verify_pypi.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml
docs/: details.md  requirements.txt
src/: create_digits_images.odg  custom_neural_network.py  html_drawing.html  html_drawing_pure.html  model.pt  nn_visualization.ipynb  user_input_drawing.py
src/ml_digits_recognition/: drawing.py  html_drawing_flask.py  html_drawing_pure.html  ml_digits_recognition_test.ipynb  model_precise.pt  neural_network.py  passenger_wsgi.py  run_app.py  user_input_drawing.ipynb  viz_netron.onnx
src/ml_digits_recognition/tests/: test_digits.py
src/torchlogs/: events.out.tfevents.1669443324.martin-shark-laptop.829701.0  events.out.tfevents.1669444843.martin-shark-laptop.829701.1  events.out.tfevents.1669498073.martin-shark-laptop.103810.0  events.out.tfevents.1669501124.martin-shark-laptop.103810.1
